cdrkit (1.1.7) UNRELEASED; urgency=low

  [ Peter Samuelson ]
  * wodim.1: small fixes.

 -- Peter Samuelson <peter@p12n.org>  Mon, 06 Aug 2007 16:12:11 -0500

cdrkit (1.1.6) RELEASED; urgency=low

  [ Vladimir Nadvornik ]
  * genisoimage/eltorito.c: care about inhibit flags when preparing eltorito
    boot catalog directory entry, avoiding possible crashes

  [ Eduard Bloch]
  * ALL: customize the base manpage subdirectory below PREFIX using the new
    MANSUBDIR variable
  * make sure that the buffer is flushed and drive is ready before closing
    session
  * icedax: find libossaudio on OpenBSD and use it
  * icedax: fixed bug with --devices (unnoticed segfault due to wrong
    list_devices arguments)
  * wodim/scsi_scan.h: moved Linux-specific recorder location guesser to an
    extra method for automatic drive opening, and added an alternative
    guessing method, using list_devices(...) picking up the first drive having
    appropriate device type in the inquiry info. This generic method is also
    used on Linux when the original guesser fails.
  * wodim/wodim.c: count all track sizes when looking for an appropriate drive

 -- Eduard Bloch <blade@debian.org>  Sun, 06 May 2007 16:39:08 +0200

cdrkit (1.1.5.1) RELEASED; urgency=low

  * resync with cosmetical last-minute changes from Peter Samuelson
  * Makefile: "release" target extension to make the Debian related source
    file creation more convinient

 -- Eduard Bloch <blade@debian.org>  Sat, 21 Apr 2007 11:30:35 +0200

cdrkit (1.1.5) RELEASED; urgency=low

  * wodim: explicite warning and more grace time if user manually specifies a size
    less than 301 sectors, which is likely to be a mistake from copy-pasting
    of genisoimage -print-size output and omitting the block factor
  * wodim: Native device name management directly in libusal now, the
    rewritten device scan method uses it directly. If the backend driver does
    not implement native names handling, the old-style IDs are displayed.